# zackory-sandbox

./: .gitignore  README.md
DeepRL/cem/: cemGym.py  cemTemp.py  pg_reinforce.py
GAN/: mnistgan.py
feeding/manifoldLearning/: ldaScooping.py
feeding/optimization/: testweightsearch.py  weightsearch.py
feeding/visualization/: histograms.py
physx_practice/: Makefile  Makefile.old  SampleBox.cc  SnippetHelloWorld  SnippetHelloWorld.cpp  SnippetHelloWorldRender.cpp
physx_simulation2_practice/: CMakeLists_old.txt  Makefile  actparcmaes.par  errcmaes.err
physx_simulation2_practice/apps/: evaluator.cpp  fakearm_test.cpp  gown_test.cpp  material_test.cpp
physx_simulation2_practice/cmake/: FindPhysX.cmake  FindPhysX_old.cmake  FindPhysX_old2.cmake
physx_simulation2_practice/config/: config.ini
physx_simulation2_practice/glog/: cdat  evaluator.INFO  evaluator.colossus14.zackory.log.INFO.20160620-123852.25693  evaluator.colossus14.zackory.log.INFO.20160620-123948.25738  evaluator.colossus14.zackory.log.INFO.20160620-124744.25957  evaluator.lawn-128-61-37-81.lawn.gatech.edu.yuwenhao.log.INFO.20160215-192110.81498  evaluator.lawn-128-61-37-81.lawn.gatech.edu.yuwenhao.log.INFO.20160215-223005.81644  evaluator.lawn-128-61-37-81.lawn.gatech.edu.yuwenhao.log.INFO.20160215-234655.83006  evaluator.lawn-128-61-37-81.lawn.gatech.edu.yuwenhao.log.INFO.20160215-234715.83036  evaluator.lawn-128-61-37-81.lawn.gatech.edu.yuwenhao.log.INFO.20160216-150022.84315  evaluator.lawn-128-61-37-81.lawn.gatech.edu.yuwenhao.log.INFO.20160216-161617.84727  evaluator.lawn-128-61-37-81.lawn.gatech.edu.yuwenhao.log.INFO.20160216-162120.84741  evaluator.lawn-128-61-37-81.lawn.gatech.edu.yuwenhao.log.INFO.20160216-162328.84756  evaluator.lawn-128-61-37-81.lawn.gatech.edu.yuwenhao.log.INFO.20160216-162919.84826  evaluator.lawn-128-61-37-81.lawn.gatech.edu.yuwenhao.log.INFO.20160216-164556.84854  evaluator.lawn-128-61-37-81.lawn.gatech.edu.yuwenhao.log.INFO.20160216-191350.85155  evaluator.lawn-128-61-37-81.lawn.gatech.edu.yuwenhao.log.INFO.20160216-195213.85210  evaluator.lawn-128-61-37-81.lawn.gatech.edu.yuwenhao.log.INFO.20160216-200427.85265  evaluator.lawn-128-61-37-81.lawn.gatech.edu.yuwenhao.log.INFO.20160216-200612.85292  evaluator.lawn-128-61-37-81.lawn.gatech.edu.yuwenhao.log.INFO.20160216-215334.85433  evaluator.lawn-128-61-37-81.lawn.gatech.edu.yuwenhao.log.INFO.20160216-232057.85549  evaluator.lawn-128-61-37-81.lawn.gatech.edu.yuwenhao.log.INFO.20160217-092755.86034  evaluator.lawn-128-61-37-81.lawn.gatech.edu.yuwenhao.log.INFO.20160217-093318.86058  evaluator.lawn-128-61-41-87.lawn.gatech.edu.yuwenhao.log.INFO.20160206-135020.54500  evaluator.lawn-128-61-41-87.lawn.gatech.edu.yuwenhao.log.INFO.20160206-230943.54923  evaluator.lawn-128-61-41-87.lawn.gatech.edu.yuwenhao.log.INFO.20160206-233238.55033  evaluator.lawn-128-61-41-87.lawn.gatech.edu.yuwenhao.log.INFO.20160206-234956.55123  evaluator.lawn-128-61-41-87.lawn.gatech.edu.yuwenhao.log.INFO.20160206-235015.55133  evaluator.lawn-128-61-41-87.lawn.gatech.edu.yuwenhao.log.INFO.20160206-235153.55169  evaluator.lawn-128-61-41-87.lawn.gatech.edu.yuwenhao.log.INFO.20160207-001359.55289  evaluator.lawn-128-61-41-87.lawn.gatech.edu.yuwenhao.log.INFO.20160207-002351.55351  evaluator.lawn-128-61-41-87.lawn.gatech.edu.yuwenhao.log.INFO.20160207-002907.55404  evaluator.lawn-128-61-41-87.lawn.gatech.edu.yuwenhao.log.INFO.20160207-003754.55462  evaluator.lawn-128-61-41-87.lawn.gatech.edu.yuwenhao.log.INFO.20160207-084339.55848  (+128 more)
pybind11_sample/PhysxVec/: Makefile  PhysxVec.cpp  PhysxVec.h
pyopengl_practice/: ShadersHeatmap2.py  cube2.py  heatmap3d2.py  hello.py  images3.py  shaders2.py  shaders3.py
sim_practice/: CMakeLists.txt
sim_practice/apps/: policySearch.cpp
sim_practice/cmake/: Findglog.cmake
sim_practice/glog/: policySearch.INFO  policySearch.colossus14.zackory.log.INFO.20160618-164924.15504  policySearch.colossus14.zackory.log.INFO.20160618-174637.16818
sim_practice/source/: CMakeLists.txt  CMakeLists.txt~  config.h.in
(+93 files in other folders)
